--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -176,7 +176,6 @@
     "\n",
     "# Calculate the date one year from the last date in data set.\n",
     "one_year_ago = dt.datetime.strptime(most_recent.date, '%Y-%m-%d') - dt.timedelta(days=365)\n",
-    "# one_year_ago = dt.date(2017, 8, 23) - dt.timedelta(days=365)\n",
     "print(one_year_ago)\n",
     "\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
@@ -369,12 +368,14 @@
    ],
    "source": [
     "# Use Pandas to calcualte the summary statistics for the precipitation data\n",
+    "# Save aggregate data grouping by date\n",
     "mean_data = sorted_last_prcp.groupby(\"date\").mean().reset_index()\n",
     "median_data = sorted_last_prcp.groupby(\"date\").median().reset_index()\n",
     "var_data = sorted_last_prcp.groupby(\"date\").var().reset_index()\n",
     "std_data = sorted_last_prcp.groupby(\"date\").std().reset_index()\n",
     "sem_data = sorted_last_prcp.groupby(\"date\").sem().reset_index()\n",
     "\n",
+    "# merge tables together while renaming field names\n",
     "mean_median = pd.merge(mean_data,median_data,how=\"left\", on=\"date\")\n",
     "mean_median.rename(columns={\"precipitation_x\":\"Mean Precipitation\",\"precipitation_y\":\"Median Precipitation\"}, inplace=True)\n",
     "\n",
